# N-Body-Simulator

./: .gitignore  .pre-commit-config.yaml  CSV_processor.py  README.md  noxfile.py  numba_comparison.py  plotter.py  pyproject.toml  runtime_benchmark.py  satellite.py  satellite.yaml
.github/workflows/: benchmark.yml  benchmark_accuracy.yml  benchmark_runtime.yml  ci.yml
docs/: conf.py  index.rst
src/: body.py  generate_bodies.py  preprocess.py  testfile.yaml
src/benchmark/: accuracy_benchmark.py  accuracy_config.yaml  runtime_benchmark.py
src/nbody/: EulerPropagator.py  __init__.py  barnes_hut.py  body.py  generate_bodies.py  main.py  plotter.py  preprocess.py  setup.py
src/nbody/config/: 3body_barneshut.yaml  3body_euler.yaml  simulation.yaml  test1.yaml  test2.yaml
src/nbody/engine/: barnes_hut.py  euler_propagator.py
src/nbody/example/: example_hohmann.yaml  hohmann.py  satellite.py  satellite.yaml
src/nbody/model/: body.py
src/nbody/results/: barnes_hut_results_20251207_145226.csv  nbody_results_20251204_145739.csv  nbody_results_20251207_145213.csv
src/nbody/utility/: CSV_processor.py  generate_bodies.py  plotter.py  preprocess.py
src/tests/: test_3body.py  test_preprocess.py  test_simulations.py
