[project]
name = "nbody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxlchien", email = "90492587+maxlchien@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nbody = "nbody:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
